pagination smaller Bug fixes

--- a/eDAL-MetaDataAPI/src/main/resources/de/ipk_gatersleben/bit/bi/edal/primary_data/css/report.css
+++ b/eDAL-MetaDataAPI/src/main/resources/de/ipk_gatersleben/bit/bi/edal/primary_data/css/report.css
@@ -2,8 +2,12 @@ html {
     position: relative;
     min-height: 100%;
     height: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 body {
+    max-width: 100%;
+    overflow-x: hidden;
     min-height: 100%;
     height: 100%;
     font-family: 'Roboto', sans-serif;
@@ -748,4 +752,18 @@ footer {
 
 .left{
   float:left;
+}
+
+.collapsible {
+  border: none;
+  text-align: left;
+  outline: none;
+}
+
+
+/* Style the collapsible content. Note: hidden by default */
+#collapsible-content {
+  display: none;
+  overflow: hidden;
+  padding-top:6px;
 }
